[project]
name = "kindling"
version = "0.1.0"
description = "Kindling web layer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3",
    "signals",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kindling"]

[tool.uv.sources]
signals = { path = "signals", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
