[project]
name = "kindling"
version = "0.1.0"
description = "Kindling web layer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h11",
    "jinja2>=3",
    "signals",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kindling"]

[tool.hatch.build.targets.wheel.force-include]
"kindling/idiomorph.min.js" = "kindling/idiomorph.min.js"

# signals: PyPI package name "signals", source at https://github.com/monster0506/pysignals
# Checked out under ./signals via git submodule (.gitmodules). uv uses that tree for editable dev.
[tool.uv.sources]
signals = { path = "signals", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
